# portfolio-tracker

./: .env.example  .gitignore  .pre-commit-config.yaml  FRONTEND_BROKER_UPDATE.md  LICENSE  README.md  ZERODHA_SETUP.md  pyproject.toml  uv-workspace.toml
.github/: copilot-instructions.md
.github/workflows/: tests.yml
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/providers/: AppProviders.tsx
frontend/src/providers/auth/: AuthProvider.tsx
frontend/src/providers/theme/: ThemeProvider.tsx
frontend/src/router/: RequireAuth.tsx  router.tsx
frontend/src/store/: appStore.ts
frontend/src/types/: domain.ts
frontend/src/ui/components/: BrokerSetupForm.tsx  Card.tsx  KpiCard.tsx  PortfolioGrowthChart.tsx
frontend/src/ui/layout/: AppShell.tsx  Footer.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/ui/pages/: BrokersPage.tsx  DashboardPage.tsx  HoldingsPage.tsx  LoginPage.tsx  NotFoundPage.tsx  RegisterPage.tsx  ResetPasswordPage.tsx  SettingsPage.tsx  TechnicalAnalysisDetailPage.tsx  TechnicalAnalysisPage.tsx  TransactionsPage.tsx
portfolio_tracker/: __init__.py  auth.py  core.py  crud.py  database.py  deps.py  encryption.py  main.py  models.py  schemas.py  utils.py
portfolio_tracker/brokers/: __init__.py  angel.py  fivepaisa.py  zerodha.py
portfolio_tracker/routers/: __init__.py  analysis.py  auth.py  broker.py  dashboard.py  portfolio.py  transactions.py
portfolio_tracker/static/: styles.css
portfolio_tracker/templates/: base.html  broker-settings.html  dashboard.html  login.html  portfolio.html  register.html  transactions.html
tests/: __init__.py  test_broker_encryption.py  test_broker_modules.py  test_broker_setup.py  test_core.py  test_models.py
